--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title :             "창업하는 그로스해커"
-tagline:            "창업하는 그로스해커 - 스타트업 성장의 모든 것"
+tagline:            "스타트업 성장의 모든 것"
 email:              "simba430@naver.com"
 description:        "스타트업/서비스기획/PM/PO/그로스해킹/디지털마케팅"
 author:             "이명준"
