--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
-title :             "창업하는 그로스해커"
+title :             "스타트업 키우기"
 tagline:            "스타트업 성장의 모든 것"
-email:              "simba430@naver.com"
-description:        "스타트업/서비스기획/PM/PO/그로스해킹/디지털마케팅"
+email:              "lmjun430@gmail.com"
+description:        "스타트업 비즈니스/서비스기획/PM/PO/디지털마케팅/그로스해킹"
 author:             "이명준"
 baseurl:            "/"
 url:                "https://lmj-for-dev.github.io/"
 locale:             "ko_KR"
-thumbnail:          "/img/thumbnail.png"
+thumbnail:          "/img/thumbnail2.png"
 
 # Social Profiles
 twitter_username:   twitter_username
