사진들 교체. 인스타그램 존버일기로 변경

--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ thumbnail:          "/img/thumbnail2.png"
 
 # Social Profiles
 twitter_username:   twitter_username
-instagram_username: 2_bright_jun
-facebook_username:  facebook_username
+instagram_username: jb._.insight
+facebook_username:  https://www.facebook.com/howtogrow.st
 linkedin_username:  linkedin_username
 
 # Build settings
